fixing responsivness on small screen

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@
   --base-color: #fff;
   --success: #2ea44f;
   --muted-text: rgb(114, 111, 111);
+  --muted-strong: rgb(208, 208, 213);
+  --active-link: #f9826c;
 }
 
 #root {
@@ -28,9 +30,6 @@ header {
   background: var(--primary);
   height: 55px;
   width: 100%;
-  position: sticky;
-  z-index: 1;
-  opacity: 0;
   animation: fadeIn 0.3s ease-in forwards 1s;
   transition: all ease-in 0.3s;
 }
@@ -97,16 +96,88 @@ button {
   cursor: pointer;
 }
 
+/* main page style ends here */
+
+/* results style ends here */
+.result-header {
+  background: var(--base-color);
+  height: 55px;
+  border-bottom: 1px solid var(--muted-strong);
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+}
+
+.result-header ul {
+  padding: 20px 360px;
+  list-style-type: none;
+}
+
+.result-header ul li {
+  border-bottom: 2px solid var(--active-link);
+  width: 150px;
+  text-align: center;
+  padding: 0 0 12px 0;
+  font-weight: bolder;
+}
+
+.result-header ul li span {
+  width: 100%;
+  background: var(--muted-strong);
+  border-radius: 7px;
+  font-size: 11px;
+  margin: 0 0 0 2px;
+  padding: 0 5px;
+  font-weight: normal;
+}
+
+.results-container {
+  display: flex;
+}
+
 .repos-wrapper {
   margin-top: 5%;
+}
+
+.user-profile {
+  padding: 0 45px;
+  margin-top: -2%;
+  z-index: 2;
+}
+
+.user-profile img {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+}
+
+.user-bio .display-name {
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.user-bio .username {
+  margin-top: -2%;
+  font-size: 16px;
+  color: var(--muted-text);
+}
+
+.user-bio .bio-details {
+  padding: 20px 0;
+}
+
+.repos-wrapper {
   height: 100%;
   padding: 0 30px;
+  width: 100%;
 }
 
 .repos-wrapper .repository {
-  width: 100%;
   height: 120px;
-  border-bottom: 1px solid var(--muted-text);
+  border-bottom: 1px solid var(--muted-strong);
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .repository .repo-name {
@@ -116,21 +187,58 @@ button {
   padding: 0 0 12px 0;
 }
 
+.repo-name:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.repository .repo-desc-container {
+  width: 100%;
+}
+
 .repository .repo-description {
   padding: 0 0 12px 0;
+  width: 650px;
 }
 
 .repository .repo-details ul {
   display: flex;
   list-style: none;
+  font-size: 12px;
 }
 
 .repository .repo-details ul li {
   padding: 0 30px 0 0;
 }
 
+.repository .star-button {
+  height: 30px;
+  width: 70px;
+  background: var(--secondary);
+  border: 1px solid var(--muted-strong);
+  border-radius: 4px;
+  outline: none;
+  margin-top: 35px;
+}
+
+.repository .star-button:hover {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 576px) {
+  header {
+    display: none;
+  }
+
+  .result-header {
+    display: block;
+  }
+
+  .search-result {
+    flex-direction: column;
+  }
   .form-wrapper {
+    /* margin-top: 88%; */
     flex-direction: column;
     justify-content: space-between !important;
     padding: 0 20px !important;
@@ -149,6 +257,49 @@ button {
     border-radius: 5px;
     margin: 0 auto;
     width: 100%;
+  }
+  /* repo card style begins here */
+  .results-container {
+    flex-direction: column;
+  }
+
+  .result-header ul {
+    padding: 20px 0;
+  }
+
+  .repos-wrapper {
+    padding: 0 10px;
+  }
+
+  .repo-desc-container .repo-description {
+    width: 100%;
+  }
+
+  .search-result .user-profile {
+    display: flex;
+  }
+
+  .user-profile {
+    padding: 0 10px;
+    margin-top: 2%;
+    z-index: -1;
+  }
+
+  .user-profile img {
+    height: 65px;
+    width: 65px;
+  }
+
+  .user-profile .user-bio {
+    padding: 0 0 0 15px;
+  }
+
+  .user-bio .display-name {
+    font-size: 26px;
+  }
+
+  .user-bio .username {
+    font-size: 20px;
   }
 }
 
